ncc/testsuite/positive/bug-1093.n
using System.Console;

interface IFoo {

    Bar(x : int * string) : string;

}


class Foo : IFoo {

    public Bar(x : int * string) : string {
        | (i, s) => $"$i, $s"
    }

}

module Program {

    Main() : void {
        def f = Foo();
        WriteLine(f.Bar( (1, "x") ));
        def i : IFoo = f;
        WriteLine(i.Bar( (2, "y") ));
    }

}

/*
BEGIN-OUTPUT
1, x
2, y
END-OUTPUT
*/